--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.gmail.ooad.flashcards">
 
     <application
+        android:name=".ApplicationContext"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".cards.PackageListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -19,6 +20,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".cards.AddCardActivity"
+            android:label="@string/add_card_label"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".cards.AddPackageActivity"
+            android:label="@string/add_package_label"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".cards.ListViewActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
