--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.gmail.ooad.flashcards">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+
     <application
         android:name=".ApplicationContext"
         android:allowBackup="true"
@@ -9,11 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <activity
             android:name=".cards.PackageListActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -22,18 +23,14 @@
         </activity>
         <activity
             android:name=".cards.AddCardActivity"
-            android:label="@string/add_card_label"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/add_card_label" />
         <activity
             android:name=".cards.AddPackageActivity"
-            android:label="@string/add_package_label"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".cards.ListViewActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
-        <activity
-            android:name=".cards.PackageViewActivity"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:label="@string/add_package_label" />
+        <activity android:name=".cards.PackageViewActivity" />
+        <activity android:name=".cards.EditCardActivity" />
+        <activity android:name=".cards.EditPackageActivity" />
+        <activity android:name=".cards.CardViewActivity"/>
     </application>
 
 </manifest>
