--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.pes.materialcolorpicker:library:1.2.0'
+    implementation 'com.yuyakaido.android:card-stack-view:1.0.0-beta9'
 }
