Slide show implemented #13. Finally... Also fixed proxies

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <activity android:name=".cards.EditCardActivity" />
         <activity android:name=".cards.EditPackageActivity" />
         <activity android:name=".cards.CardViewActivity" />
-        <activity android:name=".slideshow.SlideShowActivity"></activity>
+        <activity android:name=".slideshow.SlideShowActivity" />
     </application>
 
 </manifest>
