--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,13 +36,14 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.pes.materialcolorpicker:library:1.2.0'
+    //implementation 'com.pes.materialcolorpicker:library:1.2.0'
     implementation 'com.android.support:support-emoji-bundled:27.1.1'
-
-    implementation 'com.github.moonlightnvkz:CardStackView:-SNAPSHOT'
 
     implementation project(':flipablecardview')
     implementation project(':symbolskeyboard')
+
+    implementation 'com.github.moonlightnvkz:CardStackView:-SNAPSHOT'
+    implementation 'com.jaredrummler:colorpicker:1.0.2'
     // implementation 'com.github.moonlightnvkz:symbolsKeyboard:-SNAPSHOT'
 }
 
